framec_tests/language_specific/python/v3_capabilities/system_params/negative/system_enter_param_mismatch_v3.frm
@target python_3
# @expect: E417

# Negative: system $>(...) params do not match start state's $>() handler.

system SystemEnterParamMismatch($(color), $>(enter_color), domain) {
    interface:
        run()

    machine:
        $Red(color) {
            $>(wrong_name) {
            }
            run() {
                -> $Red(color)
            }
        }

    domain:
        domain = None
}

